# pipelinewise-tap-snowflake

./: .gitignore  Pipfile  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  veracode-static-scan.yml
tap_snowflake/: __init__.py  connection.py
tap_snowflake/sync_strategies/: common.py  full_table.py  incremental.py
tests/integration/: test_tap_snowflake.py
tests/unit/: test_unload_sql.py
