[tool.poetry]
name = "pipelinewise-tap-snowflake"
version = "2.0.9"
description = "Singer.io tap for extracting data from Snowflake - PipelineWise compatible"
authors = ["TransferWise"]
classifiers=["License :: OSI Approved :: Apache Software License","Programming Language :: Python :: 3 :: Only"]
packages=[{ include = "tap_snowflake" }]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
pipelinewise-singer-python = "2.0.1"
snowflake-connector-python = {extras = ["pandas"], version = "^2.7.12"}
pendulum = "1.2.0"
setuptools = ">=40.8.0"
wheel = ">=0.37.0"
pyOpenSSL = "22.0.0"
cryptography = ">=35.0,<37.0.0"
pandas = "1.3.5"
pyarrow = "8.0.0"

[tool.poetry.dev-dependencies]
pylint = "2.13.*"
pytest = "6.2.*"
pytest-cov = "2.12.*"
unify = "0.5"

[tool.poetry.scripts]
tap-snowflake = "tap_snowflake:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
