[tool.poetry]
name = "pipelinewise-tap-snowflake"
version = "4.0.0"
description = "Singer.io tap for extracting data from Snowflake - PipelineWise compatible"
authors = ["TransferWise"]
classifiers=["License :: OSI Approved :: Apache Software License","Programming Language :: Python :: 3 :: Only"]
packages=[{ include = "tap_snowflake" }]

[tool.poetry.dependencies]
python = "^3.13.0"
singer-python = "6.3.0"
snowflake-connector-python = "^4.4.0"
pandas = "2.3.3"
pendulum = "3.2.0"
cryptography = "^46.0.7"
pyarrow = "22.0.0"
boto3 = "1.42.26"
numpy = "^2.4.0"

[tool.poetry.scripts]
tap-snowflake = "tap_snowflake:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
